Stop wrapping of code in pres

--- a/src/web_modules/content-opt-in/index.css
+++ b/src/web_modules/content-opt-in/index.css
@@ -84,7 +84,6 @@
   max-width: 100%;
   padding: 0.188em;
   vertical-align: middle;
-  word-wrap: break-word;
 }
 
 .ContentOptIn pre code {
